--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,10 @@ chronological order.
 Changes
 -------
 
+Version 0.2.1.0 (codec -> 0.2.1.0, crc -> 0.1.1.0):
+- Made code involving calls to AspCount resilient to whatever version of Asp
+  is installed. The signature of AspCount changed in version 1.1.
+
 Version 0.2.0.0 (codec -> 0.2.0.0):
 - codec library.
   - Added encode_str and decode_str routines for string fields.
