--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,13 @@ chronological order.
 Changes
 -------
 
+Version 0.5.0.2:
+- Added a top-level testing infrastructure (i.e., test driver and CTest rules),
+  removing the one previously set up specifically for the sort library, and
+  moving its scripts into the top-level location, making minor modifications to
+  them as necessary.
+- Added regression tests for the crc and string libraries.
+
 Version 0.5.0.1: (string -> 0.1.1.1)
 - Fixed a bug in the string.find function that caused it to index beyond the
   end of the string being searched.
